k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: food-ordering
  labels:
    name: food-ordering
    app: food-ordering-application
